# stax-orchestrator

./: .cfnlintrc.yaml  .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  richard.toml  template.yaml  template.yml
.github/: CODEOWNERS  bootstrap.yaml  bucket.yaml
.github/ISSUE_TEMPLATE/: bug-form.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.MD
.github/workflows/: cfn-lint.yml  dependency-review.yml  deploy.yml  pipeline.yaml  python-lint.yml  state-lint.yml  yaml-lint.yml
docs/: direct_deployment.md  pre_deployment.md  use_of_stax_orchestrator.md
events/: create_workload.json  delete_workload.json  get_task_status.json  update_workload.json
examples/: create_catalogue.py  create_ssm_parameters.py  deploy_stax_orchestrator_from_sar.py  update_catalogue.py
functions/create_workload/: app.py
functions/delete_workload/: app.py
functions/feedback/: app.py
functions/get_task_status/: app.py
functions/stax_task/: app.py
functions/update_workload/: app.py
functions/validate_input/: app.py
sample-workload-templates/: dynamo.json  vpc.yaml
src/: constants.py  populate_stax_secrets.py  stax.py  stax_orchestrator.py  utils.py
statemachine/: task_watcher.asl.json  workload_deployer.asl.json
statemachines/: task_watcher.asl.json  workload.asl.json  workload_deployer.asl.json
tests/: conftest.py  test_stax_orchestrator.py
tests/functions/: test_create_workload.py  test_delete_workload.py  test_get_task_status.py  test_update_workload.py  test_validate_input.py
