[tool.poetry]
name = "stax-orchestrator"
version = "0.1.0"
description = "Interact with Stax to deploy workloads into your AWS Account(s)."
authors = ["boltdynamics <prasiddha.bista@stax.io>", "richardkeit <richard.keit@versent.com.au>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
staxapp = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
